# key-jackpot-digital-twin

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
resources/Models/Axis/: Axis.gltf
resources/Models/AxisSupport/: AxisSupport.gltf
resources/Models/Barrier/: Barrier.gltf
resources/Models/Base/: Base.gltf
resources/Models/LinearBearing/: LinearBearing.gltf
resources/Models/Platform0/: Platform0.gltf
resources/Models/Platform1/: Platform1.gltf
resources/Models/Rack/: Rack.gltf
resources/Models/Servomotor/: Servomotor.gltf
resources/Models/StepperMotor0/: StepperMotor0.gltf
resources/Models/UltrassonicSensor/: UltrassonicSensor.gltf
resources/Shaders/: Default.frag  Default.vert
src/: Main.cpp
src/Camera/: Camera.cpp  Camera.hpp
src/Helpers/: FileHandler.cpp  FileHandler.hpp
src/Model/: Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  VAO.cpp  VAO.hpp
src/Model/Mesh/: EBO.cpp  EBO.hpp  Mesh.cpp  Mesh.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp
src/Scene/: Scene.cpp  Scene.hpp
src/Serial/: SerialPort.cpp  SerialPort.hpp  SerialReceiver.cpp  SerialReceiver.hpp  SerialTransmitter.cpp  SerialTransmitter.hpp
src/Window/: KeyInput.cpp  KeyInput.hpp  Window.cpp  Window.hpp
